# jellyfish

./: .dockerignore  .envrc  .gitignore  .license-header  .typos.toml  CHANGELOG.md  CHANGELOG_OLD.md  CNAME  CODEOWNERS  Cargo.toml  LICENSE  README.md  bench.md  crates.js  flake.nix  help.html  index.html  rustfmt.toml  search-index.js  settings.html  shell.nix  source-files.js  src-files.js
aead/: CHANGELOG.md  Cargo.toml
aead/src/: lib.rs
commitment/: CHANGELOG.md  Cargo.toml
commitment/src/: lib.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: commitment.rs
crhf/: CHANGELOG.md  Cargo.toml
crhf/src/: lib.rs
distributed/: Cargo.toml  build.rs  rustfmt.toml
distributed/config/: circuit.toml  gpu.json  gpu.toml  network.json  network.toml
distributed/protocol/: plonk.capnp
distributed/src/: circuit.rs  circuit2.rs  config.rs  constants.rs  dispatcher.rs  lib.rs  mmap.rs  playground.rs  playground2.rs  playground3.rs  polynomial.rs  storage.rs  transpose.rs  utils.rs  worker.rs
distributed/src/gpu/: mod.rs  threadpool.rs
distributed/src/worker/: keygen.rs  mod.rs  round1.rs  round2.rs  round3.rs  round4.rs  round5.rs  utils.rs
elgamal/: CHANGELOG.md  Cargo.toml
elgamal/src/: gadgets.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_merkle_tree.rs  fuzz_universal_merkle_tree.rs
fuzz/fuzz_targets/mt/: fuzz_extension_attack.rs  fuzz_light_mt_lookup.rs  fuzz_merkle_tree.rs  fuzz_test_light_mt_serde.rs
merkle_tree/: CHANGELOG.md  Cargo.toml
merkle_tree/benches/: merkle_path.rs
merkle_tree/src/: append_only.rs  batch_proof.rs  errors.rs  examples.rs  hasher.rs  internal.rs  lib.rs  light_weight.rs  macros.rs  prelude.rs  universal_merkle_tree.rs
merkle_tree/src/gadgets/: mod.rs  universal_merkle_tree.rs
merkle_tree/src/namespaced_merkle_tree/: hash.rs  mod.rs  proof.rs
merkle_tree/tests/: merkle_tree_hasher.rs  proptest_merkle.proptest-regressions  proptest_merkle.rs  serialization_snapshot.rs
merkle_tree/tests/snapshots/: serialization_snapshot__block_membership_proofs.snap  serialization_snapshot__block_tree_commitment.snap  serialization_snapshot__empty_tree_commitment.snap  serialization_snapshot__fee_membership_proofs.snap  serialization_snapshot__fee_non_membership_proofs.snap  serialization_snapshot__fee_tree_commitment.snap  serialization_snapshot__full_tree_commitment.snap  serialization_snapshot__rewards_membership_proofs.snap  serialization_snapshot__rewards_non_membership_proofs.snap  serialization_snapshot__rewards_tree_commitment.snap  serialization_snapshot__single_element_proof.snap  serialization_snapshot__single_element_tree_commitment.snap
pcs/: CHANGELOG.md  Cargo.toml
pcs/benches/: kzg_gpu.rs  pcs.rs  pcs_size.rs
pcs/src/: errors.rs  lib.rs  poly.rs  prelude.rs  structs.rs  toeplitz.rs  transcript.rs
pcs/src/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
pcs/src/univariate_kzg/: mod.rs  srs.rs  succinct.rs
plonk/: CHANGELOG.md  Cargo.toml
plonk/benches/: bench.rs  emulated_key_aggregation.rs
plonk/examples/: proof_of_exp.rs
plonk/src/: bencher.rs  constants.rs  errors.rs  lagrange.rs  lib.rs  par_utils.rs  testing_apis.rs  transcript.rs
plonk/src/circuit/: basic.rs  gates.rs  mod.rs  transcript.rs
plonk/src/proof_system/: batch_arg.rs  mod.rs  prover.rs  snark.rs  structs.rs  verifier.rs
plonk/src/transcript/: mod.rs  rescue.rs  solidity.rs  standard.rs
poseidon2/: CHANGELOG.md  Cargo.toml
poseidon2/benches/: p2_native.rs
poseidon2/src/: constants.rs  crhf.rs  external.rs  internal.rs  lib.rs  permutation.rs  sponge.rs
poseidon2/src/constants/: bls12_381.rs  bn254.rs
prf/: CHANGELOG.md  Cargo.toml
prf/src/: lib.rs
primitives/: CHANGELOG.md  Cargo.toml
primitives/benches/: advz.rs  bls_signature.rs  hcs.rs  kzg_gpu.rs  merkle_path.rs  minroot.rs  msm.rs  pcs.rs  pcs_size.rs  reed_solomon.rs  reed_solomon_coz.rs  vrf.rs
primitives/core/: Cargo.toml
primitives/core/src/: lib.rs
primitives/merkle_tree/: Cargo.toml
primitives/merkle_tree/src/: append_only.rs  errors.rs  examples.rs  hasher.rs  internal.rs  lib.rs  light_weight.rs  macros.rs  prelude.rs  universal_merkle_tree.rs
primitives/primitives/: Cargo.toml
primitives/primitives/benches/: pcs.rs
primitives/primitives/src/: elgamal.rs  errors.rs  lib.rs  utils.rs  vid.rs
primitives/rescue/: Cargo.toml
primitives/rescue/src/: commitment.rs  lib.rs
primitives/src/: aead.rs  commitment.rs  constants.rs  crhf.rs  elgamal.rs  errors.rs  lib.rs  merkle_tree.rs  prf.rs  schnorr_dsa.rs  toeplitz.rs  utils.rs  vid.rs
primitives/src/circuit/: commitment.rs  elgamal.rs  merkle_tree.rs  mod.rs  prf.rs  schnorr_dsa.rs
primitives/tests/: advz.rs  advz2.rs  merkle_tree_hasher.rs
primitives/vdf/: Cargo.toml
prover_single_gpu/: Cargo.toml
prover_single_gpu/src/: lib.rs
relation/: CHANGELOG.md  Cargo.toml
relation/src/: basic.rs  circuit.rs  constants.rs  constraint_system.rs  errors.rs  gates.rs  lib.rs
rescue/: CHANGELOG.md  Cargo.toml
rescue/src/: commitment.rs  crhf.rs  errors.rs  lib.rs  param.rs  permutation.rs  prf.rs  sponge.rs  structs.rs
signature/: CHANGELOG.md  Cargo.toml
signature/benches/: bls_signature.rs
signature/src/: bls_over_bls12381.rs  bls_over_bn254.rs  constants.rs  lib.rs  schnorr.rs
traits/: Cargo.toml
traits/src/: commitment.rs  crhf.rs  prf.rs
utilities/: CHANGELOG.md  Cargo.toml
utilities/benches/: reed_solomon.rs
utilities/src/: conversion.rs  hash_to_group.rs  lib.rs  macros.rs  multi_pairing.rs  par_utils.rs  reed_solomon_code.rs  serialize.rs
utilities_derive/: Cargo.toml
utilities_derive/src/: lib.rs
vdf/: CHAGELOG.md  Cargo.toml
vdf/benches/: hashchain.rs  minroot.rs
vdf/src/: hashchain.rs  lib.rs  minroot.rs
vid/: CHANGELOG.md  Cargo.toml
vid/benches/: advz.rs  advz_multiplicity.rs
vid/src/: advz.rs  lib.rs  precomputable.rs
vid/tests/: advz.rs
vrf/: CHANGELOG.md  Cargo.toml
vrf/src/: blsvrf.rs  lib.rs
zprice/: .gitignore  Cargo.toml  README.md
zprice/benches/: zprice_benchmark.rs
zprice/src/: lib.rs  serde.rs
(+3673 files in other folders)
