[workspace]
members = ["plonk", "primitives", "relation", "utilities"]

[workspace.package]
version = "0.4.0-pre.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.64.0"
homepage = "https://github.com/EspressoSystems/jellyfish"
documentation = "https://jellyfish.docs.espressosys.com"
repository = "https://github.com/EspressoSystems/jellyfish"

[workspace.dependencies]
itertools = { version = "0.10.1", default-features = false }
