[workspace]
members = [
    "aead",
    "commitment",
    "crhf",
    "elgamal",
    "merkle_tree",
    "pcs",
    "plonk",
    "poseidon2",
    "prf",
    "relation",
    "rescue",
    "signature",
    "utilities",
    "vrf",
]
resolver = "2"

[workspace.package]
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.73.0"
homepage = "https://github.com/EspressoSystems/jellyfish"
documentation = "https://jellyfish.docs.espressosys.com"
repository = "https://github.com/EspressoSystems/jellyfish"

[workspace.dependencies]
ark-bls12-377 = { version = "0.5", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "0.5", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.5", default-features = false, features = [ "curve" ] }
ark-bw6-761 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ed-on-bls12-377 = { version = "0.5", default-features = false }
ark-ed-on-bls12-381 = { version = "0.5", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }
ark-ed-on-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false, features = [ "asm" ] }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.5", default-features = false }
derivative = { version = "2", features = ["use_core"] }
digest = { version = "0.10.7", default-features = false, features = [ "alloc" ] }
displaydoc = { version = "0.2", default-features = false }
hashbrown = "0.14.3"
itertools = { version = "0.12", default-features = false }
merlin = { version = "3.0.0", default-features = false }
num-bigint = { version = "0.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rayon = "1.11"
serde = { version = "1.0", default-features = false, features = [ "derive", "rc", "alloc" ] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
spongefish = { git = "https://github.com/arkworks-rs/spongefish.git", rev = "3ded547f7f56d7f8a1fc4c9a5c0ce965310bba5f", features = ["arkworks-algebra"] }
tagged-base64 = "0.4.1"
zeroize = { version = "^1.8" }

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
ark-r1cs-std = { path = "vendor/ark-r1cs-std-dummy" }
