[package]
name = "jf-aead"
version = "0.2.0"
description = "Authenticated encryption with associated data (AEAD)."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = []
std = ["ark-serialize/std", "ark-std/std", "chacha20poly1305/std"]

[dependencies]
ark-serialize = { workspace = true }
ark-std = { workspace = true }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
        "alloc",
        "rand_core",
] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
derive-where = { workspace = true }
displaydoc = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
bincode = "1.3"
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0", default-features = false }
rand_chacha = { workspace = true }
