[package]
name = "jf-commitment"
version = "0.2.0"
description = "Commitment scheme"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-std = { workspace = true }
