[package]
name = "jf-distributed"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[[bin]]
name = "keygen_dispatcher"
path = "bin/keygen_dispatcher.rs"

[[bin]]
name = "prove_dispatcher"
path = "bin/prove_dispatcher.rs"

[dependencies]
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["compat"] }
rand = "^0"
ark-std = { version = "0.3.0", features = ["parallel"] }
ark-serialize = { version = "0.3.0" }
ark-ff = { version = "0.3.0", features = ["asm", "parallel"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.3.0", features = ["curve"] }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit/", rev = "cafc05e39692bbc5c383990063ad851f0b94a553", features = ["parallel"] }
jf-plonk = { path = "../plonk" }
jf-primitives = { path = "../primitives" }
jf-utils = { path = "../utilities" }
jf-rescue = { path = "../rescue" }
merlin = "3.0.0"
serde = "1.0.145"
serde_json = "1.0.85"
rayon = "1.5.3"
once_cell = "1.15.0"
rust-gpu-tools = { version = "0.6.1", default-features = false, features = ["cuda"] }
rand_chacha = { version = "0.3.1" }
libc = "0.2"
fn-timer = { path = "../attributes" }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
stubborn-io = "0.3"
strum = { version = "0.24", features = ["derive"] }

[features]
default = ["trace"]
trace = ["ark-std/print-trace"]
