[package]
name = "jf-elgamal"
version = "0.1.0"
description = "ElGamal cryptosystem based on Rescue."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
jf-relation = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", optional = true, default-features = false }
jf-rescue = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
rayon = { version = "1.5.0", optional = true }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }

[features]
default = ["parallel"]
std = [
    "ark-ec/std", "ark-ff/std", "ark-serialize/std", "ark-std/std",
    "jf-rescue/std", "zeroize/std",
]
gadgets = ["jf-relation", "jf-rescue/gadgets"]
parallel = ["jf-relation/parallel", "jf-rescue/parallel", "rayon"]
