[package]
name = "jf-elgamal"
version = "0.2.0"
description = "ElGamal cryptosystem based on Rescue."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
    "ark-std/std",
    "jf-rescue/std",
    "zeroize/std",
]
gadgets = ["jf-relation", "jf-rescue/gadgets"]
parallel = ["jf-relation/parallel", "jf-rescue/parallel", "rayon"]

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
# following dependencies are temporarily by path
# jf-relation = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", optional = true, default-features = false }
# jf-rescue = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
jf-relation = { path = "../relation", optional = true }
jf-rescue = { path = "../rescue" }
rayon = { version = "1.5.0", optional = true }
zeroize = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bls12-381-bandersnatch = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
# temporarily using path: jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-utils = { path = "../utilities" }
