[package]
name = "jf-elgamal"
version = "0.3.0"
description = "ElGamal cryptosystem based on Rescue."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
    "ark-std/std",
    "jf-rescue/std",
    "zeroize/std",
]
gadgets = ["jf-relation", "jf-rescue/gadgets"]
parallel = ["jf-relation/parallel", "jf-rescue/parallel", "rayon"]

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-relation-v0.5.0", optional = true, default-features = false }
jf-rescue = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-rescue-v0.3.0", default-features = false }
rayon = { workspace = true, optional = true }
zeroize = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bls12-381-bandersnatch = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0", default-features = false }
