[package]
name = "jf-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
hashbrown = "0.14.3"
jf-merkle-tree = { path = "../merkle_tree", default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
libfuzzer-sys = "0.4"
num-bigint = { workspace = true }
rand = "0.9.1"
sha2 = "0.10"

[[bin]]
name = "fuzz_merkle_tree"
path = "fuzz_targets/fuzz_merkle_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_universal_merkle_tree"
path = "fuzz_targets/fuzz_universal_merkle_tree.rs"
test = false
doc = false
bench = false

[features]
default = ["jf-merkle-tree/parallel", "jf-rescue/parallel"]
