[package]
name = "jf-merkle-tree"
version = "0.1.0"
description = "Various Merkle tree implementations."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
jf-relation = { path = "../relation", optional = true, default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
serde = { workspace = true }
sha3 = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-std = { workspace = true, features = ["std"] }
bincode = "1.3"
criterion = "0.5.1"
insta = { version = "1.43.1", features = ["serde", "yaml"] }
paste = "1.0"
proptest = "1.7.0"
sha2 = "0.10"

[[bench]]
name = "merkle_path"
harness = false

[features]
default = ["parallel"]
std = [
        "ark-bls12-377/std",
        "ark-bls12-381/std",
        "ark-bn254/std",
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "num-bigint/std",
        "num-traits/std",
        "sha3/std",
        "itertools/use_std",
        "jf-utils/std",
        "jf-relation/std",
]
gadgets = [
    "jf-relation", "jf-rescue/gadgets",
]
parallel = ["jf-rescue/parallel", "jf-relation/parallel", "jf-utils/parallel"]

# See https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3
