[package]
name = "jf-merkle-tree"
version = "0.3.0"
description = "Various Merkle tree implementations."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-bls12-377/std",
    "ark-bls12-381/std",
    "ark-bn254/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "num-bigint/std",
    "num-traits/std",
    "sha3/std",
    "itertools/use_std",
    "jf-utils/std",
    "jf-relation/std",
]
gadgets = ["jf-relation", "jf-rescue/gadgets"]
parallel = ["jf-rescue/parallel", "jf-relation/parallel", "jf-utils/parallel"]

[dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true }
hex = "0.4.3"
itertools = { workspace = true, features = ["use_alloc"] }
# jf-relation = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", optional = true, default-features = false }
# jf-rescue = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
# jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
jf-crhf = { path = "../crhf" }
# temporarily by path
# jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.1.1" }
# TODO: pin to an updated version/tag next time we release a tag
jf-poseidon2 = { path = "../poseidon2" }
jf-relation = { path = "../relation", optional = true }
jf-rescue = { path = "../rescue" }
jf-utils = { path = "../utilities" }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
serde = { workspace = true }
sha3 = { workspace = true }
spongefish = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bls12-381-bandersnatch = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-std = { workspace = true, features = ["std"] }
bincode = "1.3"
criterion = "0.5.1"
sha2 = "0.10"

[[bench]]
name = "merkle_path"
harness = false
