[package]
name = "jf-merkle-tree"
version = "0.3.0"
description = "Various Merkle tree implementations."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-bls12-377/std",
    "ark-bls12-381/std",
    "ark-bn254/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "num-bigint/std",
    "num-traits/std",
    "sha3/std",
    "itertools/use_std",
    "jf-utils/std",
    "jf-relation/std",
]
gadgets = ["jf-relation", "jf-rescue/gadgets"]
parallel = ["jf-rescue/parallel", "jf-relation/parallel", "jf-utils/parallel"]

[dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true }
hex = "0.4.3"
itertools = { workspace = true, features = ["use_alloc"] }
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.2.0", default-features = false }
jf-poseidon2 = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-poseidon2-v0.2.0", default-features = false }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-relation-v0.5.0", optional = true, default-features = false }
jf-rescue = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-rescue-v0.2.0", default-features = false }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0", default-features = false }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
serde = { workspace = true }
sha3 = { workspace = true }
spongefish = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bls12-381-bandersnatch = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-std = { workspace = true, features = ["std"] }
bincode = "1.3"
criterion = "0.5.1"
sha2 = "0.10"

[[bench]]
name = "merkle_path"
harness = false
