[package]
name = "jf-plonk"
description = "TurboPlonk and UntraPlonk implementation."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0" }
hashbrown = { workspace = true }
itertools = { workspace = true }
jf-pcs = { path = "../pcs", default-features = false }
jf-relation = { path = "../relation", default-features = false }
jf-rescue = { path = "../rescue", default-features = false, features = ["gadgets"] }
jf-traits = { path = "../traits", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
merlin = { workspace = true }
num-bigint = { workspace = true }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }
serde = { workspace = true }
sha3 = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
hex = "^0.4.3"

# Benchmarks
[[bench]]
name = "plonk-benches"
path = "benches/bench.rs"
harness = false
required-features = ["test-srs"]

[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "downcast-rs/std",
    "itertools/use_std",
    "jf-relation/std",
    "jf-utils/std",
    "jf-rescue/std",
    "merlin/std",
    "num-bigint/std",
    "rand_chacha/std",
    "sha3/std",
]
test-apis = [] # exposing apis for testing purpose
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "jf-utils/parallel",
    "jf-pcs/parallel",
    "jf-relation/parallel",
    "dep:rayon",
]
test-srs = []

[[example]]
name = "proof-of-exp"
path = "examples/proof_of_exp.rs"
required-features = ["test-srs"]
