[package]
name = "jf-poseidon2"
version = "0.1.0"
description = "Poseidon2 algebraic hash functions implementation."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-bls12-381 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-ff = "0.4"
ark-std = "0.4"
displaydoc = { workspace = true }
hex = "0.4.3"
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.1.1" }
lazy_static = "1.5.0"
nimue = { version = "=0.1.1", features = ["ark"] }
zeroize = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["bls12-381", "bn254"]
# curve-named features contains constants for scalar fields of that curve
bls12-381 = ["dep:ark-bls12-381"]
bn254 = ["dep:ark-bn254"]

[[bench]]
name = "p2_native"
harness = false
